--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "dompurify": "^2.0.8",
     "express": "4.17.1",
     "express-session": "^1.17.0",
+    "jest": "^26.0.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
+    "redis": "^3.0.2",
     "sharp": "^0.25.1"
   },
   "devDependencies": {
@@ -27,7 +30,7 @@
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "node": "nodemon ./server/server.js",
+    "node": "nodemon ./server/index.js",
     "dev": "webpack -w",
     "scss": "sass public/scss/index.scss public/css/main.css --watch"
   }
