--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
     "dompurify": "^2.0.8",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "express-session": "^1.17.0",
+    "firebase-functions": "^3.6.1",
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
@@ -24,6 +27,7 @@
     "@babel/preset-react": "7.7.4",
     "babel-loader": "8.0.6",
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.20.0",
     "nodemon": "2.0.2",
     "scss": "^0.2.4",
     "webpack": "4.41.4",
