--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "my-blog",
   "version": "0.0.0",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
     "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.4",
@@ -25,6 +27,14 @@
   "devDependencies": {
     "@babel/core": "7.7.7",
     "@babel/preset-react": "7.7.4",
+    "@types/connect-redis": "latest",
+    "@types/express-session": "^1.17.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "latest",
+    "@types/mysql": "latest",
+    "@types/node": "^14.0.5",
+    "@types/redis": "latest",
+    "@types/sharp": "^0.25.0",
     "babel-loader": "8.0.6",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.20.0",
@@ -34,7 +44,7 @@
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "node": "nodemon ./server/index.js",
+    "node": "nodemon ./dist/index.js",
     "dev": "webpack -w",
     "scss": "sass public/scss/index.scss public/css/main.css --watch"
   }
