--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "mysql": "^2.17.1",
+    "mysql2": "latest",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
     "sharp": "^0.25.1"
   },
   "devDependencies": {
@@ -41,11 +42,12 @@
     "nodemon": "2.0.2",
     "scss": "^0.2.4",
     "webpack": "4.41.4",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "node": "nodemon ./dist/index.js",
     "dev": "webpack -w",
-    "scss": "sass public/scss/index.scss public/css/main.css --watch"
+    "scss": "sass public/scss/index.scss public/css/main.css --watch",
+    "start": "node ./dist/index.js"
   }
 }
