--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/connect-redis": "latest",
     "@types/express-session": "^1.17.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/react": "16.8.24",
+    "@types/react-dom": "16.0.5",
     "@types/multer": "latest",
     "@types/mysql": "latest",
     "@types/node": "^14.0.5",
